// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test view part of login form Test login form view with failure login 1`] = `
<DocumentFragment>
  <div
    class="form-box"
  >
    <form
      class="login-form"
    >
      <div
        class="column column_jc-c column_ai-c"
      >
        <h1>
          Login
        </h1>
        <div
          class="form__box row-reverse"
        >
          <input
            name="username"
            type="email"
            value=""
          />
          <label
            for="username"
          >
            Email
          </label>
        </div>
        <div
          class="form__box row-reverse"
        >
          <input
            name="password"
            type="password"
            value=""
          />
          <label
            for="password"
          >
            Password
          </label>
        </div>
        <button
          class="button send-button"
        >
          Login
        </button>
      </div>
    </form>
    <a
      class="link"
      href="/registration"
    >
      Registration
    </a>
    <strong
      class="error error_visible"
    >
      Wrong email or password
    </strong>
  </div>
</DocumentFragment>
`;

exports[`Test view part of login form Test login form view without failure login 1`] = `
<DocumentFragment>
  <div
    class="form-box"
  >
    <form
      class="login-form"
    >
      <div
        class="column column_jc-c column_ai-c"
      >
        <h1>
          Login
        </h1>
        <div
          class="form__box row-reverse"
        >
          <input
            name="username"
            type="email"
            value=""
          />
          <label
            for="username"
          >
            Email
          </label>
        </div>
        <div
          class="form__box row-reverse"
        >
          <input
            name="password"
            type="password"
            value=""
          />
          <label
            for="password"
          >
            Password
          </label>
        </div>
        <button
          class="button send-button"
        >
          Login
        </button>
      </div>
    </form>
    <a
      class="link"
      href="/registration"
    >
      Registration
    </a>
    <strong
      class="error false"
    >
      Wrong email or password
    </strong>
  </div>
</DocumentFragment>
`;
